0025430: DRAW Test Harness: dimensions demo fails

- corrected vdimparam help string;
- added section model file to prevent changing of subshapes order after explode call